feat: implement RBAC to endpoints
